web/themes/custom/nkh/src/sass/structures/_entity.scss
.entity-cta-text,
.view-cta-references {
  padding: 2rem;
  width: calc(100% + 40px);
  margin-left: -20px;
  margin-right: -20px;
  overflow: visible;
  position: relative;
  &:before,
  &:after{
    content: '';
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
  &:before{
    background: $nkh-orange;
    opacity: .9;
  }
  &:after{
    background: url('/themes/custom/nkh/images/nkh-canvas-orange.png') repeat;
    background-size: 1200px;
  }
  @include breakpoint($min480) {
    width: 100%;
    margin-left: 0;
    margin-right: 0;
  }
  .text-formatted{
    margin: 0 auto;
    text-align: center;
    max-width: 1200px;
    position: relative;
    overflow: visible;
    z-index: 1;
  }
  *{
    color: $white;
    line-height: 1.4;
    letter-spacing: .1rem;
  }
  p {
    margin: 1em 0;
  }
  a{
    display: inline;
    padding-bottom: .5rem;
    text-decoration: none;
    position: relative;
    border-bottom: 4px solid rgba($white, 0.95);
    &:after {
      content: none;
    }
  }
  &:hover{
    a{
      color: $white;
      &:before{
        top: 0;
        opacity: 1;
        transform: translate(-50%, -100%) scale(1) rotate(0deg);
      }
    }
  }
}
// the first one is specifically for the content added entity.
.embedded-entity.entity-cta-text,
.view-id-cta_references {
  font-size: 4rem;
  @include breakpoint($min768) {
    font-size: 6rem;
  }
  font-weight: 700;

  a{
    &:before{
      position: absolute;
      transform: translate(-50%, -50%) scale(0.5) rotate(5deg);
      transform-origin: bottom center;
      text-align: center;
      transition: 0.15s ease-in-out;
      opacity: 0;
      top: -100px;
      left: 50%;
      width: 300px;
      z-index: 5;
      display: block;
      height: 300px;
      background: url('/themes/custom/nkh/images/btn-bingo.gif') 0 0 no-repeat;
      background-size: 100%;
      content: '';
    }
  }
  &:hover{
    a{
      &:before{
        top: 0;
        opacity: 1;
        transform: translate(-50%, -100%) scale(1) rotate(0deg);
      }
    }
  }
}
/* ... */

